--- a/public/backbone/app/index.html
+++ b/public/backbone/app/index.html
@@ -21,14 +21,13 @@
   <!--[if lt IE 10]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-
-  <div id="navbar">
-  </div>
-
-  <div id="main">
-  </div>
-
-  <div id="footer">
+  <div id="container">
+    <div id="navbar">
+    </div>
+    <div id="main">
+    </div>
+    <div id="footer">
+    </div>
   </div>
   
   <!-- build:js scripts/main.js -->
