--- a/public/index.html
+++ b/public/index.html
@@ -17,16 +17,15 @@
   <!--[if lt IE 10]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-
-  <div id="navbar">
-  </div>
-
-  <div id="main">
-  </div>
-
-  <div id="footer">
+  <div id="container">
+    <div id="navbar">
+    </div>
+    <div id="main">
+    </div>
+    <div id="footer">
+    </div>
   </div>
   
-  <script data-main="scripts/46540b7e.main" src="bower_components/requirejs/require.js"></script>
+  <script data-main="scripts/0b9af736.main" src="bower_components/requirejs/require.js"></script>
 </body>
 </html>
